--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header secondary-bg">
         <div class="banner">
             <div class="banner-content">
-                <img src="../ass-1/assets/Group.png" alt="Banner Image" class="banner-image">
+                <img src="../assets/Group.png" alt="Banner Image" class="banner-image">
                 <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="banner-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                 <button class="btn-2">Contact With Me</button>
@@ -143,7 +143,7 @@
             </div>        
             <div class="box">
                 <div class="box-content">                    
-                    <img src="../ass-1/assets/react.png" alt="Image Description" width= "100px" height="55.19px">
+                    <img src="../assets/react.png" alt="Image Description" width= "100px" height="55.19px">
                       <div class="try">                
                         <h2 class="box-title2">ReactJS</h2>
                         <p class="box-description3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
