--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="header secondary-bg">
         <div class="banner">
             <div class="banner-content">
-                <img src="../assets/Group.png" alt="Banner Image" class="banner-image">
+                <img src="assets/Group.png" alt="Banner Image" class="banner-image">
                 <h1 class="banner-title">"In the near future, I hope to become a Developer."</h1>
                 <p class="banner-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                 <button class="btn-2">Contact With Me</button>
@@ -41,14 +41,14 @@
                     <p class="box-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <button class="btn-10">Learn More</button>
                 </div>
-                <img src="../ass-1/assets/Layer_1.png" alt="Image Description">
+                <img src="assets/Layer_1.png" alt="Image Description">
             </div>
         </div>
       
         <div class="box">
             <div class="box-content">
                 <div class="img-bg">
-                    <img src="../ass-1/assets/Group 3.png" alt="Image Description">
+                    <img src="assets/Group 3.png" alt="Image Description">
                     </div>
                 <div class="text-content">                    
                     <h2 class="box-title">I will Do Coding and Change The World</h2>
@@ -64,7 +64,7 @@
                     <p class="box-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <button class="btn-10">Learn More</button>
                 </div>
-                <img src="../ass-1/assets/Group 4.png" alt="Image Description">
+                <img src="assets/Group 4.png" alt="Image Description">
             </div>
         </div>
     </div>
@@ -143,7 +143,7 @@
             </div>        
             <div class="box">
                 <div class="box-content">                    
-                    <img src="../assets/react.png" alt="Image Description" width= "100px" height="55.19px">
+                    <img src="./assets/react.png" alt="Image Description" width= "100px" height="55.19px">
                       <div class="try">                
                         <h2 class="box-title2">ReactJS</h2>
                         <p class="box-description3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -154,7 +154,7 @@
             </div>        
             <div class="box">
                 <div class="box-content">                   
-                    <img src="../ass-1/assets/nodejs.png" alt="Image Description" width= "100px" height="55.19px">
+                    <img src="./assets/nodejs.png" alt="Image Description" width= "100px" height="55.19px">
                 <div>
                         <h2 class="box-title2">NodeJS</h2>
                         <p class="box-description3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
@@ -164,7 +164,7 @@
             <div class="box">
                 <div class="box-content">
                     
-                    <img src="../ass-1/assets/mongodb.png" alt="Image Description" width= "100px" height="55.19px">
+                    <img src="./assets/mongodb.png" alt="Image Description" width= "100px" height="55.19px">
                <div>
                         <h2 class="box-title2">MongoDB</h2>
                         <p class="box-description3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
